--- a/documentation/thesis/thesis_references.bib
+++ b/documentation/thesis/thesis_references.bib
@@ -422,9 +422,9 @@ url={https://doi.org/10.1007/978-1-4842-2677-3_5}
 }
 
 
-@Book{W19,
-shorthand = {W19},
-shortauthor={W},
+@Book{WSB19,
+shorthand = {WSB19},
+shortauthor={WSB},
 author={Wimmer, Raphael and Schmid, Andreas and Bockes, Florian},
 title={On the Latency of USB-Connected Input Devices},
 series={CHI 19: Proceedings of the 2019 CHI Conference on Human Factors in Computing Systems},
