--- a/documentation/thesis/thesis_references_alias.tex
+++ b/documentation/thesis/thesis_references_alias.tex
@@ -1,68 +1,68 @@
-\defcitealias{AFL23}{AFL23}
-
-
-\defcitealias{BPA22}{BPA22}
-
-
-\defcitealias{HH21}{HH21}
-
-
-\defcitealias{OTW19}{OTW19}
-
-
-\defcitealias{OB20}{OB20}
-
-
-\defcitealias{G17}{G17}
-
-
-\defcitealias{P17}{P17}
-
-
-\defcitealias{W19}{W19}
-
-
-\defcitealias{MMN19}{MMN19}
-
-
-\defcitealias{DBN08}{DBN08}
-
-
-\defcitealias{WAH21}{WAH21}
-
-
 \defcitealias{HMW20}{HMW20}
-
-
-\defcitealias{WZC21}{WZC21}
-
-
-\defcitealias{H80}{H80}
-
-
-\defcitealias{SB10}{SB10}
-
-
-\defcitealias{CP16}{CP16}
-
-
-\defcitealias{NK16}{NK16}
-
-
-\defcitealias{BC16}{BC16}
 
 
 \defcitealias{DRW23}{DRW23}
 
 
+\defcitealias{HH21}{HH21}
+
+
+\defcitealias{AFL23}{AFL23}
+
+
+\defcitealias{BC16}{BC16}
+
+
+\defcitealias{MWO24}{MWO24}
+
+
 \defcitealias{GKT16}{GKT16}
 
 
-\defcitealias{OTW21}{OTW21}
+\defcitealias{P17}{P17}
+
+
+\defcitealias{WZC21}{WZC21}
+
+
+\defcitealias{BPA22}{BPA22}
+
+
+\defcitealias{CP16}{CP16}
+
+
+\defcitealias{G17}{G17}
+
+
+\defcitealias{DBN08}{DBN08}
+
+
+\defcitealias{MMN19}{MMN19}
 
 
 \defcitealias{O24}{O24}
 
 
-\defcitealias{MWO24}{MWO24}
+\defcitealias{OTW21}{OTW21}
+
+
+\defcitealias{NK16}{NK16}
+
+
+\defcitealias{WAH21}{WAH21}
+
+
+\defcitealias{SB10}{SB10}
+
+
+\defcitealias{WSB19}{WSB19}
+
+
+\defcitealias{OTW19}{OTW19}
+
+
+\defcitealias{H80}{H80}
+
+
+\defcitealias{OB20}{OB20}
 
