--- a/documentation/thesis/thesis_references.bib
+++ b/documentation/thesis/thesis_references.bib
@@ -504,3 +504,28 @@ year={2016},
 pages={238-243},
 url={https://api.semanticscholar.org/CorpusID:44196402}
 }
+
+
+
+@article{J21,
+shorthand = {J21},
+shortauthor={J},
+title={Characterization of CMOS Image Sensor},
+abstract={CMOS image sensors comprises of two process: designing and measurement/testing. CMOS image sensors are designed with certain characteristic performance and it is important to measure these characteristics accurately. CMOS image sensor convert light information into digital information which can be reproduced in form of an image. Conventional 4T pixel with pinned photodiode is a popular choice for designing image sensor; with certain modification in the pixel architecture better characteristic performance can be achieved with trade-offs. Quantum efficiency, linearity, full-well capacity, conversion gain, noise, non-uniformity, dark current, modulation transfer function and image lag are main characterises of CMOS image sensor. Quantum efficiency defines the efficiency of the image sensor and ideally it should be 100 percent i.e. 1electron-hole pair for every photon incident with linear photo response. Higher full-well capacity means more number of electrons that can be generated which results in higher dynamic range and better signal to noise ratio. Conversion gain tells the efficiency of signal processing unit, higher the better. Noise sets the dynamic range of the image sensor by defining the lower limit of signal level, continuous advances have been made to reduce the noise and some image sensor can achieve noise level of 1e-. Modulation transfer function defines the spatial resolution of the image sensor, which is also the measure of optical crosstalk of the image sensor. Another characteristic which is more of an advantage over CCD image sensor is image lag which is also known as memory effect; defines the image sensors ability to transfer charge from photodiode to floating diffusion. These characteristic parameters define the CMOS image sensor and having a standard measurement procedure for computing this characteristic is necessary. This report presents the standard measurement procedure to characterize CMOS image sensor. This project is an internal project for Caeleste CVBA, Mechelen, Belgium, hence the measurement procedures are more specific to Caeleste requirement and follows EMVA 1288 standards. Measurement procedure includes all the details to evaluate the characteristic parameter: measurement background, block diagram, procedure and data processing are some of key elements of the procedures. We at Caeleste performed different methods to compute a characteristic parameter accurately and precisely. Also software library and hardware tools were updated for improving measurement accuracy and speed.},
+author={JAIN, Utsav},
+year={1016},
+month={Jul},
+day={21},
+}
+
+@article{GH13,
+shorthand = {GH13},
+shortauthor={GH},
+title={Characterization Techniques for a MEMS Electric-Field Sensor in Vacuum},
+author={Ghionea, Simon and Hull, David M.},
+journal={Journal of Electrostatics},
+year={2013},
+volume={71},
+pages={1076-1082},
+url={https://api.semanticscholar.org/CorpusID:28308084}
+}
